# dolphin

./: .gitignore  CMakeLists.txt
Source/: CMakeLists.txt
Source/Core/: DolphinLib.props
Source/Core/AudioCommon/: AudioCommon.cpp  AudioCommon.vcxproj  AudioCommon.vcxproj.filters  AudioFile.cpp  AudioFile.h  CMakeLists.txt  Mixer.cpp  Mixer.h  WaveFile.cpp  WaveFile.h
Source/Core/AudioCommon/Src/: AudioDumper.cpp  AudioDumper.h  Mixer.h  WaveFile.cpp
Source/Core/Common/: CMakeLists.txt  Image.cpp  ImageC.c  ImageC.h
Source/Core/Core/: BootManager.cpp  Core.cpp  Core.h  State.cpp  State.h
Source/Core/Core/Config/: MainSettings.cpp  MainSettings.h
Source/Core/Core/HW/: AudioInterface.cpp  AudioInterface.h  CPU.cpp  CPU.h  SystemTimers.cpp
Source/Core/Core/Src/: ConfigManager.cpp  ConfigManager.h  DSPEmulator.h  Movie.cpp  Movie.h
Source/Core/DolphinNoGUI/: CMakeLists.txt  MainNoGUI.cpp  PlatformHeadless.cpp
Source/Core/DolphinQt/: CMakeLists.txt  DolphinQt.vcxproj
Source/Core/DolphinQt/Settings/: AudioPane.cpp  AudioPane.h
Source/Core/DolphinWX/: Dolphin.vcxproj  DolphinWX.vcxproj  VideoConfigDiag.cpp
Source/Core/DolphinWX/Src/: ConfigMain.cpp  ConfigMain.h  VideoConfigDiag.cpp
Source/Core/InputCommon/: CMakeLists.txt
Source/Core/VideoBackends/D3D/: D3D.vcxproj  (+2 more)
Source/Core/VideoCommon/: AVIDump.cpp  CMakeLists.txt  RenderBase.cpp  RenderBase.h  VideoCommon.vcxproj  VideoConfig.cpp  VideoConfig.h
Source/PCH/: CMakeLists.txt
Source/Plugins/Plugin_VideoDX11/: Plugin_VideoDX11.vcxproj
Source/Plugins/Plugin_VideoDX9/: Plugin_VideoDX9.vcxproj
(+18 files in other folders)
